hands_on_files/ch12/todo-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-nodeport-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30007
